--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="top-header">
         <div class="logo">
             <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation menu"><i class="fas fa-bars"></i></button>
-            <a href="#">Le Guide de La Main Noire ⚔️</a>
+            <a href="#" data-page="home">Le Guide de La Main Noire ⚔️</a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Rechercher un guide ou un personnage..." aria-label="Search through site content">
@@ -39,7 +39,12 @@
                 </ul>
             </div>
             <button class="icon-button" aria-label="Notifications"><i class="fas fa-bell"></i></button>
-            <button class="icon-button" aria-label="Settings"><i class="fas fa-cog"></i></button>
+            <button id="settings-toggle" class="icon-button" aria-label="Settings" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cog"></i></button>
+
+            <ul id="settings-menu" class="settings-menu hidden">
+                <li><button id="theme-day-mode">☀️ Mode Jour</button></li>
+                <li><button id="theme-night-mode">🌙 Mode Nuit</button></li>
+            </ul>
         </div>
     </header>
 
@@ -47,164 +52,32 @@
         <aside class="sidebar" id="sidebar">
             <nav class="sidebar-nav" aria-label="Main navigation">
                 <ul>
-                    <li><a href="#" class="active" data-key="home_link"><i class="fas fa-home"></i> Accueil</a></li>
-                    <li><a href="#event-timers" data-key="timers_link"><i class="fas fa-hourglass-half"></i> Timers d'Événements</a></li>
-                    <li><a href="#guides" data-key="guides_link"><i class="fas fa-book"></i> Guides Stratégiques</a></li>
+                    <li><a href="#" class="active" data-page="home"><i class="fas fa-home"></i> Accueil</a></li>
+                    <li><a href="#" data-page="timers"><i class="fas fa-hourglass-half"></i> Timers d'Événements</a></li>
+                    <li><a href="#" data-page="guides"><i class="fas fa-book"></i> Guides Stratégiques</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" id="characters-dropdown-toggle" aria-expanded="false" data-key="characters_link"><i class="fas fa-users"></i> Personnages <i class="fas fa-caret-down dropdown-icon"></i></a>
+                        <a href="#" class="dropdown-toggle" id="characters-dropdown-toggle" aria-expanded="false"><i class="fas fa-users"></i> Personnages <i class="fas fa-caret-down dropdown-icon"></i></a>
                         <ul class="dropdown-menu" id="characters-dropdown-menu">
-                            <li><a href="#character-rusty">Rusty</a></li>
-                            <li><a href="#character-miho">Miho</a></li>
-                            <li><a href="#character-sarge">Sarge</a></li>
-                            <li><a href="#character-ghost">Ghost</a></li>
-                            <li><a href="#character-travis">Travis</a></li>
-                            <li><a href="#character-eva">Eva</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="rusty">Rusty</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="miho">Miho</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="sarge">Sarge</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="ghost">Ghost</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="travis">Travis</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="eva">Eva</a></li>
                             </ul>
                     </li>
-                    <li><a href="#about" data-key="about_link"><i class="fas fa-info-circle"></i> À Propos</a></li>
-                    <li><a href="#contact" data-key="contact_link"><i class="fas fa-envelope"></i> Contact</a></li>
+                    <li><a href="#" data-page="about"><i class="fas fa-info-circle"></i> À Propos</a></li>
+                    <li><a href="#" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
         </aside>
 
-        <main class="content-wrapper">
-            <section class="hero-section">
-                <h1 data-key="hero_title">Bienvenue sur Le Guide de La Main Noire</h1>
-                <p data-key="hero_subtitle">Votre ressource ultime pour dominer le jeu et progresser efficacement !</p>
-                <a href="#guides" class="cta-button" data-key="hero_cta">Découvrir les Guides <i class="fas fa-arrow-down"></i></a>
-            </section>
-
-            <section id="event-timers" class="container content-section">
-                <h2 data-key="timers_section_title">⏱️ Timers d'Événements</h2>
-                <div id="timers-container" class="card">
-                    <p data-key="timers_loading">Chargement des timers...</p>
-                </div>
-                <p class="note" data-key="timers_note">* Tous les horaires sont affichés dans votre fuseau horaire local.</p>
-            </section>
-
-            <section id="guides" class="container content-section">
-                <h2 data-key="guides_section_title">📚 Guides Stratégiques</h2>
-
-                <div class="guide-category card">
-                    <h3><button class="guide-toggle" data-target="guide-debut" aria-expanded="false" data-key="guide_beginner_title">Début de Jeu 🚀</button></h3>
-                    <div id="guide-debut" class="guide-content">
-                        <img src="https://via.placeholder.com/600x300/4a00e0/ffffff?text=Début+de+Jeu" alt="Début de Jeu" class="guide-image">
-                        <ul>
-                            <li><strong data-key="beginner_tip1_strong">Concentrez-vous sur le QG (Quartier Général) :</strong> <span data-key="beginner_tip1_text">Améliorez-le dès que possible pour débloquer de nouvelles fonctionnalités et bâtiments. C'est la clé de votre progression.</span></li>
-                            <li><strong data-key="beginner_tip2_strong">Protégez vos ressources :</strong> <span data-key="beginner_tip2_text">Gardez vos ressources (nourriture, bois, pétrole, métal) sous le seuil de protection de votre entrepôt pour ne pas les perdre en cas d'attaque.</span></li>
-                            <li><strong data-key="beginner_tip3_strong">Ne gaspillez pas vos accélérateurs :</strong> <span data-key="beginner_tip3_text">Gardez-les pour les constructions et recherches de haut niveau. Utilisez l'aide de l'alliance au maximum.</span></li>
-                            <li><strong data-key="beginner_tip4_strong">Rejoignez une alliance active :</strong> <span data-key="beginner_tip4_text">C'est primordial pour recevoir de l'aide, participer à des événements, et être protégé.</span></li>
-                            <li><strong data-key="beginner_tip5_strong">Montez vos héros d'exploration :</strong> <span data-key="beginner_tip5_text">Rusty, Miho, Sarge sont de bons choix pour l'exploration de la carte et les chasses aux infectés.</span></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="guide-category card">
-                    <h3><button class="guide-toggle" data-target="guide-heros" aria-expanded="false" data-key="guide_heroes_title">Héros et Compétences 💪</button></h3>
-                    <div id="guide-heros" class="guide-content">
-                        <img src="https://via.placeholder.com/600x300/8e2de2/ffffff?text=Héros+et+Compétences" alt="Héros et Compétences" class="guide-image">
-                        <ul>
-                            <li><strong data-key="heroes_tip1_strong">Types de Héros :</strong>
-                                <ul>
-                                    <li><strong data-key="heroes_tip1_type1_strong">Exploration/Combat (Rallye) :</strong> <span data-key="heroes_tip1_type1_text">Pour les chasses, les rallyes, et les attaques (ex: Rusty, Miho, Sarge).</span></li>
-                                    <li><strong data-key="heroes_tip1_type2_strong">Développement (Intendance) :</strong> <span data-key="heroes_tip1_type2_text">Pour les bonus de construction, recherche, production de ressources (ex: Ghost, Travis, Eva).</span></li>
-                                </ul>
-                            </li>
-                            <li><strong data-key="heroes_tip2_strong">Focus sur quelques-uns :</strong> <span data-key="heroes_tip2_text">Au début, concentrez-vous sur 3-5 héros principaux pour l'exploration et les rallyes. Ne dispersez pas vos ressources.</span></li>
-                            <li><strong data-key="heroes_tip3_strong">Éveil des Héros :</strong> <span data-key="heroes_tip3_text">Collectez des fragments de héros pour les éveiller et débloquer de puissantes compétences.</span></li>
-                            <li><strong data-key="heroes_tip4_strong">Formation de Héro :</strong> <span data-key="heroes_tip4_text">Utilisez la formation pour gagner de l'expérience et des fragments.</span></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="guide-category card">
-                    <h3><button class="guide-toggle" data-target="guide-ressources" aria-expanded="false" data-key="guide_resources_title">Gestion des Ressources 💰</button></h3>
-                    <div id="guide-ressources" class="guide-content">
-                        <img src="https://via.placeholder.com/600x300/4a00e0/ffffff?text=Gestion+des+Ressources" alt="Gestion des Ressources" class="guide-image">
-                        <ul>
-                            <li><strong data-key="resources_tip1_strong">Collecte sur la carte :</strong> <span data-key="resources_tip1_text">Envoyez vos troupes collecter de la nourriture, du bois, du pétrole, et du métal. Le niveau de la ressource influe sur la quantité.</span></li>
-                            <li><strong data-key="resources_tip2_strong">Bâtiments de production :</strong> <span data-key="resources_tip2_text">Améliorez vos fermes, scieries, raffineries et fonderies. C'est une production passive mais essentielle.</span></li>
-                            <li><strong data-key="resources_tip3_strong">Entrepôt :</strong> <span data-key="resources_tip3_text">Améliorez votre entrepôt pour augmenter le seuil de protection des ressources.</span></li>
-                            <li><strong data-key="resources_tip4_strong">Missions et événements :</strong> <span data-key="resources_tip4_text">Participez aux événements quotidiens, hebdomadaires et aux missions de l'histoire pour gagner de grandes quantités de ressources.</span></li>
-                            <li><strong data-key="resources_tip5_strong">Utilisation judicieuse :</strong> <span data-key="resources_tip5_text">Ne produisez pas un surplus de ressources au-delà de ce dont vous avez besoin pour vos prochaines constructions/recherches majeures, surtout si vous n'êtes pas bien protégé.</span></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-
-            <section id="characters" class="container content-section">
-                <h2 data-key="characters_section_title">👤 Nos Héros et Personnages</h2>
-                <div class="character-grid">
-                    <div class="character-card card" id="character-rusty">
-                        <img src="https://via.placeholder.com/150x150/00bcd4/ffffff?text=Rusty" alt="Rusty" class="character-avatar">
-                        <h3 data-key="character_rusty_name">Rusty</h3>
-                        <p class="character-role" data-key="character_rusty_role">Exploration & Combat</p>
-                        <p class="character-description" data-key="character_rusty_desc">Un héros de combat polyvalent, excellent pour les expéditions et les rallyes contre les infectés. Ses compétences augmentent les dégâts des troupes.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Rusty" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    <div class="character-card card" id="character-miho">
-                        <img src="https://via.placeholder.com/150x150/8e2de2/ffffff?text=Miho" alt="Miho" class="character-avatar">
-                        <h3 data-key="character_miho_name">Miho</h3>
-                        <p class="character-role" data-key="character_miho_role">Exploration & PvP</p>
-                        <p class="character-description" data-key="character_miho_desc">Spécialisée dans les attaques à distance et le PvP. Ses compétences améliorent la précision et la puissance de feu de vos unités.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Miho" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    <div class="character-card card" id="character-sarge">
-                        <img src="https://via.placeholder.com/150x150/4a00e0/ffffff?text=Sarge" alt="Sarge" class="character-avatar">
-                        <h3 data-key="character_sarge_name">Sarge</h3>
-                        <p class="character-role" data-key="character_sarge_role">Défense & Tank</p>
-                        <p class="character-description" data-key="character_sarge_desc">Le tank de l'équipe, excellent pour la défense de votre base. Il réduit les dégâts subis et renforce la durabilité des troupes.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Sarge" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    <div class="character-card card" id="character-ghost">
-                        <img src="https://via.placeholder.com/150x150/00bcd4/ffffff?text=Ghost" alt="Ghost" class="character-avatar">
-                        <h3 data-key="character_ghost_name">Ghost</h3>
-                        <p class="character-role" data-key="character_ghost_role">Développement & Collecte</p>
-                        <p class="character-description" data-key="character_ghost_desc">Un héros d'intendance qui accélère la production de ressources et les constructions. Idéal pour optimiser votre économie.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Ghost" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    <div class="character-card card" id="character-travis">
-                        <img src="https://via.placeholder.com/150x150/8e2de2/ffffff?text=Travis" alt="Travis" class="character-avatar">
-                        <h3 data-key="character_travis_name">Travis</h3>
-                        <p class="character-role" data-key="character_travis_role">Recherche & Entraînement</p>
-                        <p class="character-description" data-key="character_travis_desc">Spécialiste de la recherche et de l'entraînement des troupes. Il réduit les coûts et les temps nécessaires pour les avancées technologiques.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Travis" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    <div class="character-card card" id="character-eva">
-                        <img src="https://via.placeholder.com/150x150/4a00e0/ffffff?text=Eva" alt="Eva" class="character-avatar">
-                        <h3 data-key="character_eva_name">Eva</h3>
-                        <p class="character-role" data-key="character_eva_role">Soins & Soutien</p>
-                        <p class="character-description" data-key="character_eva_desc">Une unité de soutien essentielle qui peut soigner les troupes blessées et améliorer leur survie au combat.</p>
-                        <a href="#" class="view-details-button" aria-label="View details for Eva" data-key="view_details_button">Voir les détails</a>
-                    </div>
-                    </div>
-            </section>
-
-            <section id="about" class="container content-section">
-                <h2 data-key="about_section_title">ℹ️ À Propos de Nous</h2>
-                <div class="card about-card">
-                    <p data-key="about_paragraph1">Bienvenue sur Le Guide de La Main Noire, la communauté dédiée aux joueurs cherchant à optimiser leur progression et maîtriser toutes les facettes du jeu. Notre mission est de vous fournir des guides clairs, des astuces à jour et des informations précieuses pour vous aider à devenir un joueur d'élite.</p>
-                    <p data-key="about_paragraph2">Que vous soyez un débutant cherchant ses marques ou un vétéran souhaitant affiner ses stratégies, vous trouverez ici les ressources nécessaires pour atteindre vos objectifs. Rejoignez notre communauté et commencez votre ascension vers la victoire !</p>
-                </div>
-            </section>
-
-            <section id="contact" class="container content-section">
-                <h2 data-key="contact_section_title">📧 Contactez-Nous</h2>
-                <div class="card contact-card">
-                    <p data-key="contact_intro">Des questions, des suggestions, ou besoin d'aide ? N'hésitez pas à nous contacter !</p>
-                    <form class="contact-form">
-                        <input type="text" placeholder="Votre Nom" required aria-label="Your Name" data-key="contact_name_placeholder">
-                        <input type="email" placeholder="Votre Email" required aria-label="Your Email" data-key="contact_email_placeholder">
-                        <textarea placeholder="Votre Message" rows="5" required aria-label="Your Message" data-key="contact_message_placeholder"></textarea>
-                        <button type="submit" class="cta-button" data-key="contact_send_button">Envoyer le Message</button>
-                    </form>
-                </div>
-            </section>
-        </main>
+        <main class="content-wrapper" id="main-content-area">
+            </main>
     </div>
 
     <footer>
-        <p data-key="footer_copyright">&copy; 2025 Le Guide de La Main Noire. Tous droits réservés.</p>
+        <p>&copy; 2025 Le Guide de La Main Noire. Tous droits réservés.</p>
         <div class="social-links">
             <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
