--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <button id="settings-toggle" class="icon-button" aria-label="Settings" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cog"></i></button>
 
             <ul id="settings-menu" class="settings-menu hidden">
-                <li><button id="theme-day-mode">☀️ Mode Jour</button></li>
-                <li><button id="theme-night-mode">🌙 Mode Nuit</button></li>
+                <li><button id="theme-day-mode" data-key="day_mode">☀️ Mode Jour</button></li>
+                <li><button id="theme-night-mode" data-key="night_mode">🌙 Mode Nuit</button></li>
             </ul>
         </div>
     </header>
@@ -52,11 +52,11 @@
         <aside class="sidebar" id="sidebar">
             <nav class="sidebar-nav" aria-label="Main navigation">
                 <ul>
-                    <li><a href="#" class="active" data-page="home"><i class="fas fa-home"></i> Accueil</a></li>
-                    <li><a href="#" data-page="timers"><i class="fas fa-hourglass-half"></i> Timers d'Événements</a></li>
-                    <li><a href="#" data-page="guides"><i class="fas fa-book"></i> Guides Stratégiques</a></li>
+                    <li><a href="#" class="active" data-page="home" data-key="home_link"><i class="fas fa-home"></i> Accueil</a></li>
+                    <li><a href="#" data-page="timers" data-key="timers_link"><i class="fas fa-hourglass-half"></i> Timers d'Événements</a></li>
+                    <li><a href="#" data-page="guides" data-key="guides_link"><i class="fas fa-book"></i> Guides Stratégiques</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" id="characters-dropdown-toggle" aria-expanded="false"><i class="fas fa-users"></i> Personnages <i class="fas fa-caret-down dropdown-icon"></i></a>
+                        <a href="#" class="dropdown-toggle" id="characters-dropdown-toggle" aria-expanded="false" data-key="characters_link"><i class="fas fa-users"></i> Personnages <i class="fas fa-caret-down dropdown-icon"></i></a>
                         <ul class="dropdown-menu" id="characters-dropdown-menu">
                             <li><a href="#" data-page="characters" data-sub-page="rusty">Rusty</a></li>
                             <li><a href="#" data-page="characters" data-sub-page="miho">Miho</a></li>
@@ -66,8 +66,8 @@
                             <li><a href="#" data-page="characters" data-sub-page="eva">Eva</a></li>
                             </ul>
                     </li>
-                    <li><a href="#" data-page="about"><i class="fas fa-info-circle"></i> À Propos</a></li>
-                    <li><a href="#" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
+                    <li><a href="#" data-page="about" data-key="about_link"><i class="fas fa-info-circle"></i> À Propos</a></li>
+                    <li><a href="#" data-page="contact" data-key="contact_link"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
         </aside>
@@ -77,7 +77,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Le Guide de La Main Noire. Tous droits réservés.</p>
+        <p data-key="footer_copyright">&copy; 2025 Le Guide de La Main Noire. Tous droits réservés.</p>
         <div class="social-links">
             <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
