--- a/home.html
+++ b/home.html
@@ -3,3 +3,11 @@
     <p data-key="hero_subtitle">Votre ressource ultime pour dominer le jeu et progresser efficacement !</p>
     <a href="#" class="cta-button" data-key="hero_cta" data-page="guides">Découvrir les Guides <i class="fas fa-arrow-down"></i></a>
 </section>
+
+<section id="discord-invite" class="container content-section card text-center">
+    <h2 data-key="discord_invite_title">🎉 Rejoignez notre Communauté Discord !</h2>
+    <p data-key="discord_invite_text">Ne manquez aucune discussion, astuce ou annonce ! Rejoignez notre serveur Discord pour échanger avec d'autres passionnés et obtenir de l'aide en direct.</p>
+    <a href="https://discord.gg/wNJYkN5kCc" target="_blank" class="cta-button discord-button" data-key="discord_join_button">
+        <i class="fab fa-discord"></i> Rejoindre le Discord
+    </a>
+</section>
