--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             <li><a href="#" data-page="characters" data-sub-page="ghost">Ghost</a></li>
                             <li><a href="#" data-page="characters" data-sub-page="travis">Travis</a></li>
                             <li><a href="#" data-page="characters" data-sub-page="eva">Eva</a></li>
+                            <li><a href="#" data-page="characters" data-sub-page="lucky">Lucky</a></li>
                             </ul>
                     </li>
                     <li><a href="#" data-page="about" data-key="about_link"><i class="fas fa-info-circle"></i> À Propos</a></li>
