--- a/characters.html
+++ b/characters.html
@@ -2,46 +2,53 @@
     <h2 data-key="characters_section_title">👤 Nos Héros et Personnages</h2>
     <div class="character-grid">
         <div class="character-card card" id="character-rusty">
-            <img src="https://via.placeholder.com/150x150/00bcd4/ffffff?text=Rusty" alt="Rusty" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/f/fe/Rusty.png/revision/latest/scale-to-width-down/1200?cb=20201014102113" alt="Rusty" class="character-avatar">
             <h3 data-key="character_rusty_name">Rusty</h3>
             <p class="character-role" data-key="character_rusty_role">Exploration & Combat</p>
             <p class="character-description" data-key="character_rusty_desc">Un héros de combat polyvalent, excellent pour les expéditions et les rallyes contre les infectés. Ses compétences augmentent les dégâts des troupes.</p>
             <a href="#" class="view-details-button" aria-label="View details for Rusty" data-key="view_details_button">Voir les détails</a>
         </div>
         <div class="character-card card" id="character-miho">
-            <img src="https://via.placeholder.com/150x150/8e2de2/ffffff?text=Miho" alt="Miho" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/3/3b/Miho.png/revision/latest?cb=20201014142602" alt="Miho" class="character-avatar">
             <h3 data-key="character_miho_name">Miho</h3>
             <p class="character-role" data-key="character_miho_role">Exploration & PvP</p>
             <p class="character-description" data-key="character_miho_desc">Spécialisée dans les attaques à distance et le PvP. Ses compétences améliorent la précision et la puissance de feu de vos unités.</p>
             <a href="#" class="view-details-button" aria-label="View details for Miho" data-key="view_details_button">Voir les détails</a>
         </div>
         <div class="character-card card" id="character-sarge">
-            <img src="https://via.placeholder.com/150x150/4a00e0/ffffff?text=Sarge" alt="Sarge" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/7/71/Sarge.png/revision/latest/scale-to-width-down/1200?cb=20201014114404" alt="Sarge" class="character-avatar">
             <h3 data-key="character_sarge_name">Sarge</h3>
             <p class="character-role" data-key="character_sarge_role">Défense & Tank</p>
             <p class="character-description" data-key="character_sarge_desc">Le tank de l'équipe, excellent pour la défense de votre base. Il réduit les dégâts subis et renforce la durabilité des troupes.</p>
             <a href="#" class="view-details-button" aria-label="View details for Sarge" data-key="view_details_button">Voir les détails</a>
         </div>
         <div class="character-card card" id="character-ghost">
-            <img src="https://via.placeholder.com/150x150/00bcd4/ffffff?text=Ghost" alt="Ghost" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/0/05/Ghost_happy.png/revision/latest/scale-to-width-down/1200?cb=20201014102852" alt="Ghost" class="character-avatar">
             <h3 data-key="character_ghost_name">Ghost</h3>
             <p class="character-role" data-key="character_ghost_role">Développement & Collecte</p>
             <p class="character-description" data-key="character_ghost_desc">Un héros d'intendance qui accélère la production de ressources et les constructions. Idéal pour optimiser votre économie.</p>
             <a href="#" class="view-details-button" aria-label="View details for Ghost" data-key="view_details_button">Voir les détails</a>
         </div>
         <div class="character-card card" id="character-travis">
-            <img src="https://via.placeholder.com/150x150/8e2de2/ffffff?text=Travis" alt="Travis" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/0/03/Travis.png/revision/latest/scale-to-width-down/1200?cb=20201014133540" alt="Travis" class="character-avatar">
             <h3 data-key="character_travis_name">Travis</h3>
             <p class="character-role" data-key="character_travis_role">Recherche & Entraînement</p>
             <p class="character-description" data-key="character_travis_desc">Spécialiste de la recherche et de l'entraînement des troupes. Il réduit les coûts et les temps nécessaires pour les avancées technologiques.</p>
             <a href="#" class="view-details-button" aria-label="View details for Travis" data-key="view_details_button">Voir les détails</a>
         </div>
         <div class="character-card card" id="character-eva">
-            <img src="https://via.placeholder.com/150x150/4a00e0/ffffff?text=Eva" alt="Eva" class="character-avatar">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/e/e4/224.png/revision/latest?cb=20240322122025&path-prefix=fr" alt="Eva" class="character-avatar">
             <h3 data-key="character_eva_name">Eva</h3>
             <p class="character-role" data-key="character_eva_role">Soins & Soutien</p>
             <p class="character-description" data-key="character_eva_desc">Une unité de soutien essentielle qui peut soigner les troupes blessées et améliorer leur survie au combat.</p>
             <a href="#" class="view-details-button" aria-label="View details for Eva" data-key="view_details_button">Voir les détails</a>
+        </div>
+        <div class="character-card card" id="character-lucky">
+            <img src="https://static.wikia.nocookie.net/state-of-survival/images/a/a6/Lucky.png/revision/latest?cb=20201014142400" alt="Lucky" class="character-avatar">
+            <h3 data-key="character_lucky_name">Lucky</h3>
+            <p class="character-role" data-key="character_lucky_role">Chance & Collecte</p>
+            <p class="character-description" data-key="character_lucky_desc">Un héros axé sur la chance et la collecte de ressources, idéal pour optimiser les gains sur la carte.</p>
+            <a href="#" class="view-details-button" aria-label="View details for Lucky" data-key="view_details_button">Voir les détails</a>
         </div>
     </div>
 </section>
