--- a/characters.html
+++ b/characters.html
@@ -1,5 +1,5 @@
 <section id="characters" class="container content-section">
-    <h2 data-key="characters_section_title">👤 Nos Héros et Personnages</h2>
+    <h2 data-key="characters_section_title">👤 Héros et Personnages</h2>
     <div class="character-grid">
         <div class="character-card card" id="character-rusty">
             <img src="https://static.wikia.nocookie.net/state-of-survival/images/f/fe/Rusty.png/revision/latest/scale-to-width-down/1200?cb=20201014102113" alt="Rusty" class="character-avatar">
