--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
                 <ul>
                     <li><a href="#" class="active" data-page="home" data-key="home_link"><i class="fas fa-home"></i> Accueil</a></li>
                     <li><a href="#" data-page="timers" data-key="timers_link"><i class="fas fa-hourglass-half"></i> Timers d'Événements</a></li>
-                    <li><a href="#" data-page="guides" data-key="guides_link"><i class="fas fa-book"></i> Guides Stratégiques</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" id="guides-dropdown-toggle" aria-expanded="false" data-key="guides_link"><i class="fas fa-book"></i> Guides Stratégiques <i class="fas fa-caret-down dropdown-icon"></i></a>
+                        <ul class="dropdown-menu" id="guides-dropdown-menu">
+                            <li><a href="#" data-page="guides" data-sub-page="general-guides" data-key="general_guides_link">Guides Généraux</a></li>
+                            <li><a href="#" data-page="guides-koh" data-key="koh_guide_link">King of the Hill (KoH)</a></li>
+                            </ul>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" id="characters-dropdown-toggle" aria-expanded="false" data-key="characters_link"><i class="fas fa-users"></i> Personnages <i class="fas fa-caret-down dropdown-icon"></i></a>
                         <ul class="dropdown-menu" id="characters-dropdown-menu">
