--- a/guides-koh.html
+++ b/guides-koh.html
@@ -3,7 +3,7 @@
     <p data-key="koh_intro">Ce guide détaille la stratégie pour l'événement King of the Hill (KoH), un événement de 60 minutes divisé en 3 étapes de 20 minutes chacune.</p>
 
     <div class="card guide-category">
-        <h3 data-key="koh_plan_title">Plan Initial : King of the Hill (Dimanche 18.08)</h3>
+        <h3 data-key="koh_plan_title">Plan Initial : King of the Hill </h3>
         <p data-key="koh_plan_info">Le plan alloue des équipes à des positions spécifiques avec des leaders et des membres.</p>
         <div class="koh-table-container">
             <table>
